fix: fixed weird text wrapping issue

--- a/play/style.css
+++ b/play/style.css
@@ -8,6 +8,11 @@
     justify-content: flex-start;
 }
 
+.torrey-console__stdout,
+.torrey-console__stderr {
+    display: block;
+}
+
 .torrey-program, 
 .torrey-console {
     font-family: Menlo, monospace;
